# virtual-sensor

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  process.cpp  wsconfig.example.json
.github/workflows/: cmake.yml
checktools/: consumer
include/: client_connector.h  common.h  exceptions.h  filter.h  kafka_producer.h  main.h  message_producer.h  process.h  process_repository.h  recorder.h  repository.h  sensor.h  sensor_logger.h  utils.h  worker_repository.h  ws_manager_client.h
include/clients/: kafka_client.h
include/handlers/: auth_handler.h  cmd_handler.h  config_handler.h  plain_json_str.h  sys_info_handler.h  ws_message.h
include/repository/: filter.h  repository.h
include/schema/: json_serializable.h  process.h  sys_info.h
include/schemas/: cpu.h  disk_usage.h  io.h  json_serializable.h  memory.h  network_interface.h  process.h  sys_info.h
src/: filter.cpp  kafka_producer.cpp  main.cpp  message_producer.cpp  process.cpp  recorder.cpp  repository.cpp  sensor.cpp  sensor_logger.cpp  utils.cpp  worker_repository.cpp  ws_manager_client.cpp
src/clients/: kafka_client.cpp
src/handlers/: auth_handler.cpp  config_handler.cpp  plain_json_str.cpp  sys_info_handler.cpp  ws_message.cpp
src/repository/: filter.cpp  repository.cpp
src/schema/: process.cpp  sys_info.cpp
src/schemas/: cpu.cpp  disk_usage.cpp  io.cpp  memory.cpp  network_interface.cpp  process.cpp  sys_info.cpp
